Edited the navigation bar for blogs

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,9 @@ list:
   - title: Careers
     url: careers.html
 
+  - title: Blog
+    url: https://blog.aazizandco.co.uk
+
   - title: Who we Serve?
     subfolderitems:
       - page: Limited Companies
