This is major edit with team members and link correction

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ socials:
   soundcloud:
   spotify:
 address:
-  street: 2- Sanders Parade, Greyhound Lane
+  street: 2- Sanders Parade, Greyhound Lane,
   city: Streatham,
   state: London,
   country: UK,
