--- a/_data/team.yml
+++ b/_data/team.yml
@@ -56,7 +56,7 @@
   linkedin: 
 
 - name: Muhammad Waqas
-  image: assets/dev/img/team/random.png
+  image: assets/dev/img/team/muhammad-waqas.jpg
   designation: Payroll Manager
   facebook: 
   twitter: 
@@ -77,7 +77,7 @@
   linkedin: 
 
 - name: Izbah Aslam
-  image: assets/dev/img/team/random.png
+  image: assets/dev/img/team/izbah-aslam.jpg
   designation: HR Assistant
   facebook: 
   twitter: 
