--- a/_data/team.yml
+++ b/_data/team.yml
@@ -50,7 +50,7 @@
 
 - name: Osama Jamil
   image: assets/dev/img/team/osama-jamil.png
-  designation: Payroll Assistant
+  designation: Payroll Administrator
   facebook: 
   twitter: 
   linkedin: 
