--- a/_data/team.yml
+++ b/_data/team.yml
@@ -57,7 +57,7 @@
 
 - name: Muhammad Waqas
   image: assets/dev/img/team/muhammad-waqas.jpg
-  designation: Payroll Manager
+  designation: Accounts Manager
   facebook: 
   twitter: 
   linkedin: 
