--- a/_data/team.yml
+++ b/_data/team.yml
@@ -29,7 +29,7 @@
 
 - name: Taimoor Azhar
   image: assets/dev/img/team/taimoor.png
-  designation: HR Manager
+  designation: Operations Manager
   facebook: 
   twitter: 
   linkedin: 
