--- a/_data/team.yml
+++ b/_data/team.yml
@@ -8,7 +8,7 @@
 
 - name: Ali Shan
   image: assets/dev/img/team/ali-shan.png
-  designation: Access Practice Manager
+  designation: Assistant Practice Manager
   facebook: 
   twitter: 
   linkedin: 
@@ -41,12 +41,12 @@
 #   twitter: 
 #   linkedin: 
 
-- name: Ali Husnain
-  image: assets/dev/img/team/ali-hasnain.png
-  designation: Self Assessment Manager
-  facebook: 
-  twitter: 
-  linkedin: 
+# - name: Ali Husnain
+#   image: assets/dev/img/team/ali-hasnain.png
+#   designation: Self Assessment Manager
+#   facebook: 
+#   twitter: 
+#   linkedin: 
 
 - name: Osama Jamil
   image: assets/dev/img/team/osama-jamil.png
@@ -75,6 +75,27 @@
   facebook: 
   twitter: 
   linkedin: 
+  
+- name: Zumer Yasin
+  image: assets/dev/img/team/random.png
+  designation: Marketing Executive
+  facebook: 
+  twitter: 
+  linkedin: 
+
+- name: Syed M. Ali Abidi
+  image: assets/dev/img/team/random.png
+  designation: Self Assessment Assistant
+  facebook: 
+  twitter: 
+  linkedin: 
+
+- name: Zainab Batool Fatima
+  image: assets/dev/img/team/random.png
+  designation: Assistant Accounts Manager
+  facebook: 
+  twitter: 
+  linkedin: 
 
 - name: Izbah Aslam
   image: assets/dev/img/team/izbah-aslam.jpg
@@ -85,7 +106,7 @@
 
 - name: Shifa ur Rehman
   image: assets/dev/img/team/random.png
-  designation: IT & Security Manager
+  designation: IT & Cyber-Security Manager
   facebook: 
   twitter: 
   linkedin: 
