--- a/_data/team.yml
+++ b/_data/team.yml
@@ -1,7 +1,7 @@
 
 - name: Ajmal Baig
   image: assets/dev/img/team/ajmal-baig.png
-  designation: Chief Executive Officer
+  designation: Director
   facebook: 
   twitter: 
   linkedin: 
