Awais Profile Picture Update

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -69,7 +69,7 @@
   linkedin:
 
 - name: Mirza Awais
-  image: assets/dev/img/team/random.png
+  image: assets/dev/img/team/main/mirza-awais.jpg
   designation: Marketing Assistant
   facebook:
   twitter:
