--- a/_data/team.yml
+++ b/_data/team.yml
@@ -111,7 +111,7 @@
   linkedin:
 
 - name: Talha Hanif
-  image: assets/dev/img/team/random.png
+  image: assets/dev/img/team/talha-hanif.jpg
   designation: Marketing Assistant
   facebook:
   twitter:
