--- a/_data/team.yml
+++ b/_data/team.yml
@@ -118,6 +118,7 @@
   linkedin:
 
 - image: assets/dev/img/team/random.png
+  name: Shifa ur Rehman
   designation: IT & Cyber-Security Manager
   facebook:
   twitter:
