--- a/_data/team.yml
+++ b/_data/team.yml
@@ -74,12 +74,12 @@
 #  twitter:
 #  linkedin:
 
-- image: assets/dev/img/team/zumer-yasin.jpg
-#  name: Zumer Yasin
-  designation: Client Care Officer
-  facebook:
-  twitter:
-  linkedin:
+# - image: assets/dev/img/team/zumer-yasin.jpg
+# #  name: Zumer Yasin
+#   designation: Client Care Officer
+#   facebook:
+#   twitter:
+#   linkedin:
 
 # - image: assets/dev/img/team/ali-abdi.jpg
 #   name: Syed M. Ali Abidi
