Changes from the boota sb

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # site settings
 title: AAziz & Co. Accountants and Tax Consultants
-email: info@aazizandco.co.uk
+email: info@depotax.co.uk
 secondary_email: staff@aazizandco.co.uk
 description: This is official jekyll template for bootstrap 5 by Brianloggers.
 socials:
