--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # site settings
-title: AAziz & Co. Accountants and Tax Consultants
+title: DepoTax. Accountants and Tax Consultants
 email: info@depotax.co.uk
 secondary_email: staff@aazizandco.co.uk
 description: This is official jekyll template for bootstrap 5 by Brianloggers.
@@ -7,9 +7,9 @@ socials:
   phone: +44 203 6599 254
   whatsapp: +44 781 0448 530
   whatsapp2: +44 739 2438 213
-  facebook: AAzizandco
-  instagram: aazizandco_uk
-  twitter: AazizTax
+  facebook: DepoTaxAccountants
+  instagram: depotax_uk
+  twitter: DepoTax_UK
   gmb: aazizandco
   youtube:
   trustpilot: AAziz
