--- a/_data/team.yml
+++ b/_data/team.yml
@@ -12,6 +12,105 @@
   twitter:
   linkedin:
 
+- image: assets/dev/img/team/taimoor.png
+#  name: Taimoor Azhar
+  designation: Operations Manager
+  facebook:
+  twitter:
+  linkedin:
+
+- image: assets/dev/img/team/accounts-executive.jpg
+   # name: Accounts Executive
+  designation: Accounts Executive
+  facebook:
+  twitter:
+  linkedin:
+
+- image: assets/dev/img/team/senior-accounts-manager.jpg
+  # name: Senior Accounts Manager
+  designation: Senior Accounts Manager
+  facebook:
+  twitter:
+  linkedin:
+  
+- image: assets/dev/img/team/boota.jpg
+  # name: M. Boota
+  designation: IT & Cyber-Security Manager
+  facebook:
+  twitter:
+  linkedin:  
+
+- image: assets/dev/img/team/hr-manager.jpg
+  # name: HR Manager
+  designation: HR Manager
+  facebook:
+  twitter:
+  linkedin:
+
+- image: assets/dev/img/team/cmd-executive.jpg
+  # name: CMD Executive
+  designation: CMD Executive
+  facebook:
+  twitter:
+  linkedin:
+  
+- image: assets/dev/img/team/marketing-assistant.jpg
+  # name: Marketing Assistant
+  designation: Marketing Assistant
+  facebook:
+  twitter:
+  linkedin:
+
+- image: assets/dev/img/team/cma.jpg
+  # name: Client Management Associate
+  designation: Client Management Associate
+  facebook:
+  twitter:
+  linkedin:
+
+- image: assets/dev/img/team/junior-accounts-manager.jpg
+  # name: Junior Accounts Manager
+  designation: Junior Accounts Manager
+  facebook:
+  twitter:
+  linkedin:
+  
+ - image: assets/dev/img/team/junior-accounts-manager2.jpg
+  # name: Junior Accounts Manager
+  designation: Junior Accounts Manager
+  facebook:
+  twitter:
+  linkedin:        
+
+- image: assets/dev/img/team/pAAA.jpg
+  # name: Payroll Administrator/Accounts Assistant
+  designation: Payroll Administrator/Accounts Assistant
+  facebook:
+  twitter:
+  linkedin:
+
+- image: assets/dev/img/team/bookkeeper-junior-accountant.jpg
+  # name: BookKeeper/Junior Accountant
+  designation: BookKeeper/Junior Accountant
+  facebook:
+  twitter:
+  linkedin:
+ 
+- image: assets/dev/img/team/accounts-assistant2.jpg
+  # name: Accounts Assistant
+  designation: Accounts Assistant
+  facebook:
+  twitter:
+  linkedin:
+ 
+- image: assets/dev/img/team/accounts-assistant3.jpg
+  # name: Accounts Assistant
+  designation: Accounts Assistant
+  facebook:
+  twitter:
+  linkedin:
+  
+     
 #- image: assets/dev/img/team/saba-zaki.png
 #  name: Saba Zaki
 #  designation: Supervisor
@@ -26,12 +125,6 @@
 #   twitter:
 #   linkedin:
 
-- image: assets/dev/img/team/taimoor.png
-#  name: Taimoor Azhar
-  designation: Operations Manager
-  facebook:
-  twitter:
-  linkedin:
 
 # - name: Ayesha Mughal
 #   image: assets/dev/img/team/ayesha-mughal.png
@@ -95,20 +188,6 @@
 #   twitter:
 #   linkedin:
 
-- image: assets/dev/img/team/izbah-aslam.jpg
-   # name: Izba Aslam
-  designation: HR Assistant
-  facebook:
-  twitter:
-  linkedin:
-
-- image: assets/dev/img/team/random.png
-  name: Zahra Akram
-  designation: Admin Assistant
-  facebook:
-  twitter:
-  linkedin:
-
 #- image: assets/dev/img/team/talha-hanif.jpg
 #  name: Talha Hanif
 #  designation: Marketing Assistant
@@ -135,17 +214,17 @@
 #   twitter:
 #   linkedin:
 
-- image: assets/dev/img/team/random.png
-  name: Shifa ur Rehman
-  designation: IT & Cyber-Security Manager
-  facebook:
-  twitter:
-  linkedin:
+# - image: assets/dev/img/team/random.png
+#  name: Shifa ur Rehman
+#  designation: IT & Cyber-Security Manager
+#  facebook:
+#  twitter:
+#  linkedin:
 
-  - image: assets/dev/img/team/random.png
-  # name: AwaisAhmad
-  designation: IT Assistant
-  facebook:
-  twitter:
-  linkedin:
+#  - image: assets/dev/img/team/random.png
+#  # name: AwaisAhmad
+#  designation: IT Assistant
+#  facebook:
+#  twitter:
+#  linkedin:
 
