--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # site settings
-title: Aziz & Co. Accountants and Tax Consultants
+title: DepoTax. Accountants and Tax Consultants
 email: info@depotax.co.uk
 secondary_email: staff@aazizandco.co.uk
 description: This is official jekyll template for bootstrap 5 by Brianloggers.
